<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MESCloud</string>
    <string name="settings">设置</string>
    <string name="close">关闭</string>
    <string name="set_domain">设置域名</string>
    <string name="domain_tips">请输入域名</string>
    <string name="logo">图标</string>
    <string name="login">登录</string>
    <string name="username_tips">用户名</string>
    <string name="password_tips">密码</string>
    <string name="rememberpwd">记住密码</string>
    <string name="tvstart_zero">精简  方便  快捷</string>
    <string name="tvstart_one">实时动态反馈</string>
    <string name="tvstart_two">数据精确查询</string>
    <string name="appstart">立即体验</string>
    <string name="btn_ok">确定</string>
    <string name="btn_cancel">取消</string>
    <string name="sale">销售</string>
    <string name="product">生产</string>
    <string name="quality">质仓</string>
    <string name="tool">模具</string>
    <string name="tvlogo">铝智云登 录</string>
    <string name="myaccount">个人信息</string>
    <string name="loginagian">重新登录</string>
    <string name="exit">退出程序</string>
</resources>
